[project]
name = "WIOpy"
version = "1.2.2"
description = "A Python wrapper for the Walmart IO API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "CoderJoshDK" }]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pycryptodome",
    "aiohttp",
    "typing-extensions>=4.5.0; python_version < '3.12'",
]
keywords = [
    "API",
    "Wrapper",
    "Walmart",
    "Affiliate",
    "WalmartIO",
    "Async",
    "AIOHTTP",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ruff>=0.9.3",
]

[project.urls]
"Homepage" = "https://github.com/CoderJoshDK/WIOpy"
"Bug Reports" = "https://github.com/CoderJoshDK/WIOpy/issues"
"Source" = "https://github.com/CoderJoshDK/WIOpy"

[tool.ruff]
line-length = 100
fix = true
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "Q", "A", "I", "D",
    "UP", "ASYNC", "FA", "ISC", "RET", "SIM", "ARG", "PL", "RUF"]
ignore = ["PLR0913", "ISC001", "PLR2004", "D203", "D212"]
unfixable = ["F841"]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[tool.basedpyright]
include = ["wiopy"]
exclude = [
    "**/__pycache__",
    "wiopy/typestubs"
]
defineConstant = { DEBUG = true }

reportMissingImports = "error"
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false
reportImplicitStringConcatenation = false
